--- a/popup.html
+++ b/popup.html
@@ -86,3 +86,5 @@
   <script src="popup.js"></script>
 </body>
 </html>
+
+<!--Auto-Generated Version Tag: VGhlIG9uZSwgVGhlIE9ubHksIFJ5YW5xLjQ3IHdhcyBoZXJl-->
